--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next"
+    "dev": "NODE_OPTIONS=\"--openssl-legacy-provider --inspect\" next"
   },
   "keywords": [],
   "author": "",
