add code fix routing

--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -21,7 +21,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: uth-srv
+                name: auth-srv
                 port:
                   number: 3000
           - path: /api/tickets/?(.*)
