--- a/tickets/Dockerfile
+++ b/tickets/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:alpine
+FROM node:16-alpine
 
 WORKDIR /app
-COPY . .
-RUN npm install --only=prod
+COPY package.json package-lock.json ./
+RUN npm install 
 COPY . .
 
 CMD ["npm", "start"]
