--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
-    - host: www.uat-uhouse.tk
+    - host: "www.uat-uhouse.tk"
       http:
         paths:
           - path: /api/payments/?(.*)
